Fixed overflow issue and and made about us responsive on desktop.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,13 @@
 html, body {
-    /*overflow-x: hidden;*/
-    max-width: max-content;
-    margin: auto;
     scroll-behavior: smooth;
+    margin: 0px !important;
+    padding: 0px !important;
+    overflow-x: clip !important;
 }
 body {
     background-color: rgb(255, 255, 255);
     font-family: 'Montserrat', sans-serif;
+
 }
 /*
 font-family: 'Montserrat', sans-serif; 200 500
@@ -19,6 +20,8 @@ header{
     position: absolute;    
     z-index: 5;
     left: 0;
+    max-width: 100vw;
+    overflow-x: hidden; 
 }
 #menu{
     padding: 0;
@@ -36,6 +39,12 @@ header{
 }
 
 /*  ------------ HERO SECTION ------------ */
+#hero-outer{
+    max-width: 100vw;
+    overflow-x: hidden;    
+    overflow-x: hidden !important;
+
+}
 #hero-content{
     position: absolute;
     z-index: 2;
@@ -44,20 +53,23 @@ header{
     display: grid
 }
 #hero-video{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
     width: 100vw;
     height: 100vh;
     justify-content: right;
-    display: flex;  
+    display: flex; 
 }
 #hero-video video{
     height: 100vh;
     filter: blur(0px) contrast(100%) saturate(2);
     z-index: 1;  
 }
-
 #hero-content h1{
+   padding-top: 0.5em;
    font-weight: 700;
-   font-size: 20vw;
+   font-size: 22vw;
    margin: 0;
    align-self: end;
 }
@@ -69,7 +81,6 @@ header{
     margin-left: 20px;
     max-width: 50vw;
 }
-
 #hero-content-container button{
     border: 1px solid rgb(226, 193, 187);
     background-color: rgb(255, 255, 255);
@@ -82,42 +93,15 @@ header{
     margin-bottom: 50px;
     min-width: 150px;
 }
+
+
 /*  ------------ ABOUT US ------------ */
-/*#aboutUs-outer{
-    margin-top: 8em;
-    background-color: rgb(250, 229, 215);
-}
-#aboutUs-content{
-    width: 100vw;
-    display: grid;
-    grid-template-columns: 30% 40% 30% ;
-}
-#aboutUs-content img{
-    border-radius: 10%;
-    width: 30vw;
-    justify-self: center;
-    align-self: center;
-    position: relative;
-    grid-column: 2 / 3;
-    grid-row: 1 / 3;
-}
-#aboutUs-content #item-one, #aboutUs-content #item-two{
-    grid-column: 1 / 2;
-    margin-left: 0.5em;
-}
-#aboutUs-content #item-three, #aboutUs-content #item-four{
-    grid-column: 3 / 4;
-    margin-right: 0.5em;
-}
-#aboutUs-content #item-three{
-    grid-row: 1/2;
-}*/
 #aboutUs-outer{
     margin-top: 8em;
-    background-color: rgb(241, 221, 207);
+    background-color: rgb(192, 185, 171);
 }
 #aboutUs-outer h2{
-    color: rgb(241, 221, 207);
+    color: rgb(192, 185, 171);
     position: relative;
     bottom: 0.9em;
     margin: 0;
@@ -128,11 +112,10 @@ header{
     display: grid;
     grid-template-columns: 60% 40%;
 }
-
 #aboutUs-content #sticky{
     height: 2em;
     grid-column: 2 / 3;
-    grid-row: 1 / 10;
+    grid-row: 1 / 6;
     position: sticky;
     justify-self: center;
     align-self: start;
@@ -153,16 +136,16 @@ header{
     padding: 1em 0;
     width: 30vw;
     background-color: white;
-    border-radius: 10%;
+    border-radius: 5%;
 }
-
 #aboutUs-content button:hover{
     color: white;
     background-color: rgb(61, 61, 61);
 }
 .aboutUs-item{
-    margin-left: 5px;
+    margin-left: 1em;
 }
+
 .aboutUs-item p{
     font-size: 3.5vw;
 }
@@ -170,6 +153,12 @@ header{
     font-size: 5vw;
     margin-bottom: 2px;
 }
+.aboutUs-item:last-child {
+    margin-bottom: 3em;
+}
+
+/*  ------------ CONTACT US ------------ */
+
 
 /* ----- MOBILE FIRST DESIGN -----*/
 /*GOOGLE NEST HUB */
@@ -189,7 +178,7 @@ header{
         display: flex;  
     }
     #hero-content-container p{
-        font-size: 0.9em;
+        font-size: 0.9em !important;
     }
 }
 /*GOOGLE NEST HUB MAX*/
@@ -210,12 +199,13 @@ header{
     }
 }
 
-/*SMALL DEVICES*/
+/*VERY SMALL DEVICES -- GLAXY FOLD*/
 @media screen and (max-width: 280px) {
     #hero-content h1{
         font-size: 4em;
     }
 }
+
 /*SMALL DEVICES*/
 @media screen and (min-width: 768px) {
 
@@ -223,8 +213,24 @@ header{
         max-width: 30vh;
     }
     #hero-content h1{
-        /*font-size: 8em;*/
         font-size: 21vw;
+    }
+
+    .aboutUs-item{
+        grid-column: 2/3;
+    }
+    .aboutUs-item p{
+        font-size: 2vw;
+    }
+    .aboutUs-item h5{
+        font-size: 4vw;
+    }
+    #aboutUs-content #sticky{
+        grid-column: 3/4;
+        grid-row: 1/6;
+    }
+    #aboutUs-content{
+        grid-template-columns: 10% 40% 40% 10%;
     }
 }
 
@@ -245,6 +251,13 @@ header{
         font-size: 21vw;
         padding-top: 20px;
     }
+
+    .aboutUs-item p{
+        font-size: 19px;
+    }
+    .aboutUs-item h5{
+        font-size: 36px;
+    }
 }
 
 /*LARGE DESKTOPS*/
@@ -258,6 +271,12 @@ header{
         margin-top: 0;
         margin-bottom: 10px;
     }
+    
+
+    #aboutUs-content img, #aboutUs-content button{
+        width: 300px;
+    }
+
 }
 
 /* XL LARGE DESKTOPS*/
@@ -267,5 +286,9 @@ header{
     }
     #hero-video{
         justify-content: left;
+    }
+
+    #aboutUs-content{
+        grid-template-columns: auto 544px 400px auto !important;
     }
 }
